--- a/xfce-extra/thunar-archive/ChangeLog
+++ b/xfce-extra/thunar-archive/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for xfce-extra/thunar-archive
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-extra/thunar-archive/ChangeLog,v 1.22 2007/05/21 18:01:07 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-extra/thunar-archive/ChangeLog,v 1.23 2007/05/24 20:30:40 pylon Exp $
+
+  24 May 2007; Lars Weiler <pylon@gentoo.org>
+  thunar-archive-0.2.4-r1.ebuild:
+  Stable on ppc; bug #178510.
 
   21 May 2007; Jeroen Roovers <jer@gentoo.org>
   thunar-archive-0.2.4-r1.ebuild:
