--- a/xfce-extra/thunar-media-tags/ChangeLog
+++ b/xfce-extra/thunar-media-tags/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for xfce-extra/thunar-media-tags
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-extra/thunar-media-tags/ChangeLog,v 1.15 2007/05/21 18:01:04 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-extra/thunar-media-tags/ChangeLog,v 1.16 2007/05/24 20:22:36 pylon Exp $
+
+  24 May 2007; Lars Weiler <pylon@gentoo.org>
+  thunar-media-tags-0.1.2.ebuild:
+  Stable on ppc; bug #178510.
 
   21 May 2007; Jeroen Roovers <jer@gentoo.org>
   thunar-media-tags-0.1.2.ebuild:
