--- a/xfce-extra/thunar-thumbnailers/ChangeLog
+++ b/xfce-extra/thunar-thumbnailers/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for xfce-extra/thunar-thumbnailers
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-extra/thunar-thumbnailers/ChangeLog,v 1.17 2007/05/21 18:35:50 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-extra/thunar-thumbnailers/ChangeLog,v 1.18 2007/05/24 20:33:06 pylon Exp $
+
+  24 May 2007; Lars Weiler <pylon@gentoo.org>
+  thunar-thumbnailers-0.2.0.ebuild:
+  Stable on ppc; bug #178510.
 
   21 May 2007; Jeroen Roovers <jer@gentoo.org>
   thunar-thumbnailers-0.2.0.ebuild:
