--- a/xfce-extra/xfce4-battery/ChangeLog
+++ b/xfce-extra/xfce4-battery/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for xfce-extra/xfce4-battery
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-battery/ChangeLog,v 1.54 2007/05/19 15:04:01 welp Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-battery/ChangeLog,v 1.55 2007/05/24 20:17:55 pylon Exp $
+
+  24 May 2007; Lars Weiler <pylon@gentoo.org> xfce4-battery-0.5.0-r2.ebuild:
+  Stable on ppc; bug #178510.
 
   19 May 2007; Peter Weller <welp@gentoo.org> xfce4-battery-0.5.0-r2.ebuild:
   Stable on amd64 wrt bug 178510
