--- a/xfce-extra/xfce4-cpu-freq/ChangeLog
+++ b/xfce-extra/xfce4-cpu-freq/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for xfce-extra/xfce4-cpu-freq
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-cpu-freq/ChangeLog,v 1.9 2007/05/19 15:07:13 welp Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-cpu-freq/ChangeLog,v 1.10 2007/05/24 20:21:18 pylon Exp $
+
+  24 May 2007; Lars Weiler <pylon@gentoo.org> xfce4-cpu-freq-0.0.1.ebuild:
+  Stable on ppc; bug #178510.
 
   19 May 2007; Peter Weller <welp@gentoo.org> xfce4-cpu-freq-0.0.1.ebuild:
   Stable on amd64 wrt bug 178510
