--- a/xfce-extra/xfce4-eyes/ChangeLog
+++ b/xfce-extra/xfce4-eyes/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for xfce-extra/xfce4-eyes
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-eyes/ChangeLog,v 1.14 2007/05/18 18:27:32 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-eyes/ChangeLog,v 1.15 2007/05/24 20:23:51 pylon Exp $
+
+  24 May 2007; Lars Weiler <pylon@gentoo.org> xfce4-eyes-4.4.0.ebuild:
+  Stable on ppc; bug #178510.
 
   18 May 2007; Raúl Porcel <armin76@gentoo.org> xfce4-eyes-4.4.0.ebuild:
   Add ~alpha wrt #175749
