--- a/xfce-extra/xfce4-mount/ChangeLog
+++ b/xfce-extra/xfce4-mount/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for xfce-extra/xfce4-mount
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-mount/ChangeLog,v 1.30 2007/05/21 18:05:29 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-mount/ChangeLog,v 1.31 2007/05/24 20:25:14 pylon Exp $
+
+  24 May 2007; Lars Weiler <pylon@gentoo.org> xfce4-mount-0.5.1.ebuild:
+  Stable on ppc; bug #178510.
 
   21 May 2007; Jeroen Roovers <jer@gentoo.org> xfce4-mount-0.5.1.ebuild:
   Stable for HPPA (bug #178510).
