--- a/xfce-base/xfce-mcs-manager/ChangeLog
+++ b/xfce-base/xfce-mcs-manager/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for xfce-base/xfce-mcs-manager
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfce-mcs-manager/ChangeLog,v 1.89 2007/05/21 17:24:55 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfce-mcs-manager/ChangeLog,v 1.90 2007/05/24 20:42:30 pylon Exp $
+
+  24 May 2007; Lars Weiler <pylon@gentoo.org> xfce-mcs-manager-4.4.1.ebuild:
+  Stable on ppc; bug #178510.
 
   21 May 2007; Jeroen Roovers <jer@gentoo.org>
   xfce-mcs-manager-4.4.1.ebuild:
