Stable on ppc; bug #178510. Package-Manager: portage-2.1.2.7

--- a/xfce-base/xfce-utils/ChangeLog
+++ b/xfce-base/xfce-utils/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for xfce-base/xfce-utils
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfce-utils/ChangeLog,v 1.108 2007/05/23 15:03:53 drac Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfce-utils/ChangeLog,v 1.109 2007/05/24 20:54:23 pylon Exp $
+
+  24 May 2007; Lars Weiler <pylon@gentoo.org> xfce-utils-4.4.1-r1.ebuild:
+  Stable on ppc; bug #178510.
 
 *xfce-utils-4.4.1-r2 (23 May 2007)
 
