--- a/xfce-base/orage/ChangeLog
+++ b/xfce-base/orage/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for xfce-base/orage
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-base/orage/ChangeLog,v 1.28 2007/05/21 17:38:17 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-base/orage/ChangeLog,v 1.29 2007/05/24 21:02:09 pylon Exp $
+
+  24 May 2007; Lars Weiler <pylon@gentoo.org> orage-4.4.1.ebuild:
+  Stable on ppc; bug #178510.
 
   21 May 2007; Jeroen Roovers <jer@gentoo.org> orage-4.4.1.ebuild:
   Stable for HPPA (bug #178510).
