--- a/xfce-base/xfce-mcs-plugins/ChangeLog
+++ b/xfce-base/xfce-mcs-plugins/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for xfce-base/xfce-mcs-plugins
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfce-mcs-plugins/ChangeLog,v 1.93 2007/05/21 17:41:29 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfce-mcs-plugins/ChangeLog,v 1.94 2007/05/24 20:58:38 pylon Exp $
+
+  24 May 2007; Lars Weiler <pylon@gentoo.org> xfce-mcs-plugins-4.4.1.ebuild:
+  Stable on ppc; bug #178510.
 
   21 May 2007; Jeroen Roovers <jer@gentoo.org>
   xfce-mcs-plugins-4.4.1.ebuild:
