--- a/xfce-base/xfce4-extras/ChangeLog
+++ b/xfce-base/xfce4-extras/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for xfce-base/xfce4-extras
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfce4-extras/ChangeLog,v 1.63 2007/05/22 15:43:10 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfce4-extras/ChangeLog,v 1.64 2007/05/24 20:48:08 pylon Exp $
+
+  24 May 2007; Lars Weiler <pylon@gentoo.org> xfce4-extras-4.4.1.ebuild:
+  Stable on ppc; bug #178510.
 
   22 May 2007; Raúl Porcel <armin76@gentoo.org> xfce4-extras-4.4.1.ebuild:
   Add ~alpha wrt #175749
