--- a/xfce-base/xfce4/ChangeLog
+++ b/xfce-base/xfce4/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for xfce-base/xfce4
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfce4/ChangeLog,v 1.103 2007/05/21 17:58:40 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfce4/ChangeLog,v 1.104 2007/05/24 21:09:32 pylon Exp $
+
+  24 May 2007; Lars Weiler <pylon@gentoo.org> xfce4-4.4.1.ebuild:
+  Stable on ppc; bug #178510.
 
   21 May 2007; Jeroen Roovers <jer@gentoo.org> xfce4-4.4.1.ebuild:
   Stable for HPPA (bug #178510).
