--- a/xfce-base/xfprint/ChangeLog
+++ b/xfce-base/xfprint/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for xfce-base/xfprint
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfprint/ChangeLog,v 1.97 2007/05/21 17:46:41 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfprint/ChangeLog,v 1.98 2007/05/24 20:56:23 pylon Exp $
+
+  24 May 2007; Lars Weiler <pylon@gentoo.org> xfprint-4.4.1.ebuild:
+  Stable on ppc; bug #178510.
 
   21 May 2007; Jeroen Roovers <jer@gentoo.org> xfprint-4.4.1.ebuild:
   Stable for HPPA (bug #178510).
