--- a/x11-plugins/replytolist/ChangeLog
+++ b/x11-plugins/replytolist/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-plugins/replytolist
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-plugins/replytolist/ChangeLog,v 1.11 2007/05/20 14:07:44 josejx Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-plugins/replytolist/ChangeLog,v 1.12 2007/05/24 21:46:01 flameeyes Exp $
+
+  24 May 2007; Diego Pettenò <flameeyes@gentoo.org>
+  replytolist-0.2.0.ebuild:
+  Add ~x86-fbsd keyword, as per bug #175183.
 
   20 May 2007; Joseph Jezak <josejx@gentoo.org> replytolist-0.2.0.ebuild:
   Marked ppc stable for bug #178983.
