--- a/kde-base/kdebase/ChangeLog
+++ b/kde-base/kdebase/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kdebase
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdebase/ChangeLog,v 1.364 2007/05/22 22:35:10 carlo Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdebase/ChangeLog,v 1.365 2007/05/25 00:31:51 jer Exp $
+
+  25 May 2007; Jeroen Roovers <jer@gentoo.org> kdebase-3.5.5-r4.ebuild:
+  Stable for HPPA too.
 
 *kdebase-3.5.7 (22 May 2007)
 
