--- a/media-tv/ivtv/ChangeLog
+++ b/media-tv/ivtv/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for media-tv/ivtv
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-tv/ivtv/ChangeLog,v 1.79 2007/04/27 01:43:45 beandog Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-tv/ivtv/ChangeLog,v 1.80 2007/05/25 03:08:21 beandog Exp $
+
+*ivtv-0.10.2 (25 May 2007)
+
+  25 May 2007; Steve Dibb <beandog@gentoo.org> +ivtv-0.10.2.ebuild:
+  Version bump, bug 176876
 
   27 Apr 2007; Steve Dibb <beandog@gentoo.org> ivtv-0.4.7.ebuild,
   ivtv-0.4.8.ebuild, ivtv-0.6.4.ebuild, ivtv-0.6.5.ebuild,
