--- a/sys-kernel/usermode-sources/ChangeLog
+++ b/sys-kernel/usermode-sources/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for sys-kernel/usermode-sources
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/usermode-sources/ChangeLog,v 1.86 2007/01/03 04:32:05 dang Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/usermode-sources/ChangeLog,v 1.87 2007/05/25 03:23:50 dang Exp $
+
+*usermode-sources-2.6.18-r2 (25 May 2007)
+
+  25 May 2007; Daniel Gryniewicz <dang@gentoo.org>
+  +files/usermode-sources-2.6.18-r2-gentoo-headers.patch,
+  +usermode-sources-2.6.18-r2.ebuild:
+  Bump to 2.6.18-r2
+  	- Includes a patch to work with linux-header-2.6.21
 
   03 Jan 2007; Daniel Gryniewicz <dang@gentoo.org>
   +files/usermode-sources-2.6.18-r1-CVE-2006-4572.patch,
