--- a/app-laptop/thinkpad/ChangeLog
+++ b/app-laptop/thinkpad/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-laptop/thinkpad
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-laptop/thinkpad/ChangeLog,v 1.20 2007/03/21 01:05:02 steev Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-laptop/thinkpad/ChangeLog,v 1.21 2007/05/25 07:00:31 opfer Exp $
+
+  25 May 2007; Christian Faulhammer <opfer@gentoo.org> ChangeLog:
+  corrected ChangeLog, so it conforms to our standards
 
   21 Mar 2007; Steev Klimaszewski <steev@gentoo.org> thinkpad-5.9-r1.ebuild:
   Add set_kvobj so that the kernel modules get installed properly.
@@ -117,7 +120,7 @@
   17 Feb 2003; Wout Mertens <wmertens@gentoo.org>:
   version bump and correct kernel version detection
 
-*thinkpad-3.2 (25 April 2002)
+*thinkpad-3.2 (25 Apr 2002)
 
   24 Feb 2003; Nicholas Wourms <dragon@gentoo.org> thinkpad-3.2.ebuild :
   This is definitely not for mips.
