corrected ChangeLog, so it conforms to our standards Package-Manager: portage-2.1.2.7

--- a/app-laptop/acpi4asus/ChangeLog
+++ b/app-laptop/acpi4asus/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-laptop/acpi4asus
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-laptop/acpi4asus/ChangeLog,v 1.15 2007/05/12 22:29:25 genstef Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-laptop/acpi4asus/ChangeLog,v 1.16 2007/05/25 07:09:47 opfer Exp $
+
+  25 May 2007; Christian Faulhammer <opfer@gentoo.org> ChangeLog:
+  corrected ChangeLog, so it conforms to our standards
 
 *acpi4asus-0.41 (12 May 2007)
 
@@ -8,6 +11,8 @@
   +acpi4asus-0.41.ebuild:
   Fix for kernel 2.6.21 thanks to Pacho Ramos
   <pacho@condmat1.ciencias.uniovi.es> in bug 177956
+
+*acpi4asus-0.40-r1 (22 Mar 2007)
 
   22 Mar 2007; Stefan Schweizer <genstef@gentoo.org> +acpi4asus-0.40-r1.ebuild:
   change emake command thanks CHARY Corentin <corentincj@iksaif.net> in bug
