--- a/kde-base/kdeutils/ChangeLog
+++ b/kde-base/kdeutils/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kdeutils
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeutils/ChangeLog,v 1.200 2007/05/22 23:26:22 carlo Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeutils/ChangeLog,v 1.201 2007/05/25 13:53:18 cryos Exp $
+
+  25 May 2007; Marcus D. Hanwell <cryos@gentoo.org> kdeutils-3.5.7.ebuild:
+  Exclude obsolete patch that no longer applies cleanly. Closes bug 179553.
 
 *kdeutils-3.5.7 (22 May 2007)
 
