--- a/kde-base/kde-i18n/ChangeLog
+++ b/kde-base/kde-i18n/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for kde-base/kde-i18n
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kde-i18n/ChangeLog,v 1.132 2007/03/18 01:41:02 genone Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kde-i18n/ChangeLog,v 1.133 2007/05/25 14:07:16 cryos Exp $
+
+*kde-i18n-3.5.7 (25 May 2007)
+
+  25 May 2007; Marcus D. Hanwell <cryos@gentoo.org> +kde-i18n-3.5.7.ebuild:
+  Version bump.
 
   18 Mar 2007; Marius Mauch <genone@gentoo.org> kde-i18n-3.5.5.ebuild,
   kde-i18n-3.5.6.ebuild:
