--- a/dev-php5/pecl-fileinfo/ChangeLog
+++ b/dev-php5/pecl-fileinfo/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-php5/pecl-fileinfo
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php5/pecl-fileinfo/ChangeLog,v 1.18 2007/05/24 19:42:41 opfer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-php5/pecl-fileinfo/ChangeLog,v 1.19 2007/05/25 14:59:52 ranger Exp $
+
+  25 May 2007; Brent Baude <ranger@gentoo.org> pecl-fileinfo-1.0.4.ebuild:
+  Marking pecl-fileinfo-1.0.4 ppc64 stable for bug 176542
 
   24 May 2007; Christian Faulhammer <opfer@gentoo.org>
   pecl-fileinfo-1.0.4.ebuild:
