--- a/dev-scheme/mit-scheme/ChangeLog
+++ b/dev-scheme/mit-scheme/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-scheme/mit-scheme
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-scheme/mit-scheme/ChangeLog,v 1.3 2007/01/18 12:00:18 hkbst Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-scheme/mit-scheme/ChangeLog,v 1.4 2007/05/25 17:27:21 hkbst Exp $
+
+*mit-scheme-20070205 (25 May 2007)
+
+  25 May 2007; Marijn Schouten <hkBst@gentoo.org>
+  +mit-scheme-20070205.ebuild:
+  add snapshot, bug 161883
 
   18 Jan 2007; Marijn Schouten <hkBst@gentoo.org> metadata.xml,
   mit-scheme-7.7.1.ebuild:
