--- a/xfce-extra/xfce4-xfapplet/ChangeLog
+++ b/xfce-extra/xfce4-xfapplet/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for xfce-extra/xfce4-xfapplet
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-xfapplet/ChangeLog,v 1.18 2007/05/18 12:07:08 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-xfapplet/ChangeLog,v 1.19 2007/05/25 17:47:28 drac Exp $
+
+  25 May 2007; Samuli Suominen <drac@gentoo.org>
+  xfce4-xfapplet-0.1.0.ebuild:
+  Add bundled DOCS installation.
 
   18 May 2007; Raúl Porcel <armin76@gentoo.org>
   xfce4-xfapplet-0.1.0.ebuild:
