--- a/app-crypt/luks-tools/ChangeLog
+++ b/app-crypt/luks-tools/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-crypt/luks-tools
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-crypt/luks-tools/ChangeLog,v 1.2 2007/01/24 19:25:00 hanno Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-crypt/luks-tools/ChangeLog,v 1.3 2007/05/25 21:54:29 cardoe Exp $
+
+  25 May 2007; Doug Goldstein <cardoe@gentoo.org> luks-tools-0.0.12.ebuild:
+  keyword ~amd64. bug #179709
 
 *luks-tools-0.0.12 (24 Jan 2007)
 
