--- a/dev-lang/tendra/ChangeLog
+++ b/dev-lang/tendra/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-lang/tendra
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/tendra/ChangeLog,v 1.5 2007/05/19 20:52:01 truedfx Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/tendra/ChangeLog,v 1.6 2007/05/25 22:36:35 truedfx Exp $
+
+*tendra-5.0_pre20070510 (25 May 2007)
+
+  25 May 2007; Harald van Dĳk <truedfx@gentoo.org>
+  -tendra-5.0_pre20060322.ebuild, +tendra-5.0_pre20070510.ebuild:
+  New snapshot, now from tendra.org
 
   19 May 2007; Harald van Dĳk <truedfx@gentoo.org>
   +files/tendra-5.0_pre20060322-install.patch,
