Marked ~ppc and ~ppc64 Package-Manager: portage-2.1.2.7

--- a/media-libs/amrnb/ChangeLog
+++ b/media-libs/amrnb/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/amrnb
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/amrnb/ChangeLog,v 1.1 2007/05/12 16:40:14 beandog Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/amrnb/ChangeLog,v 1.2 2007/05/26 06:28:14 lu_zero Exp $
+
+  26 May 2007; Luca Barbato <lu_zero@gentoo.org> amrnb-6.1.0.3.ebuild:
+  Marked ~ppc and ~ppc64
 
 *amrnb-6.1.0.3 (12 May 2007)
 
