--- a/media-libs/amrwb/ChangeLog
+++ b/media-libs/amrwb/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/amrwb
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/amrwb/ChangeLog,v 1.1 2007/05/12 16:52:52 beandog Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/amrwb/ChangeLog,v 1.2 2007/05/26 06:30:13 lu_zero Exp $
+
+  26 May 2007; Luca Barbato <lu_zero@gentoo.org> amrwb-7.0.0.0.ebuild:
+  Marked ~ppc and ~ppc64
 
 *amrwb-7.0.0.0 (12 May 2007)
 *amrwb-6.0.0.1 (12 May 2007)
