--- a/xfce-base/xfce-mcs-plugins/ChangeLog
+++ b/xfce-base/xfce-mcs-plugins/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for xfce-base/xfce-mcs-plugins
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfce-mcs-plugins/ChangeLog,v 1.95 2007/05/25 11:47:21 drac Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfce-mcs-plugins/ChangeLog,v 1.96 2007/05/26 07:46:06 drac Exp $
+
+*xfce-mcs-plugins-4.4.1-r1 (26 May 2007)
+
+  26 May 2007; Samuli Suominen <drac@gentoo.org>
+  +files/xfce-mcs-plugins-4.4.1-xrdb.patch,
+  +xfce-mcs-plugins-4.4.1-r1.ebuild:
+  Revision bump for DPI patch from upstream bug 3164.
 
   25 May 2007; Samuli Suominen <drac@gentoo.org>
   xfce-mcs-plugins-4.4.1.ebuild:
