--- a/dev-java/blackdown-jdk/ChangeLog
+++ b/dev-java/blackdown-jdk/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for dev-java/blackdown-jdk
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/blackdown-jdk/ChangeLog,v 1.117 2007/05/21 07:53:09 opfer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/blackdown-jdk/ChangeLog,v 1.118 2007/05/26 10:50:01 caster Exp $
+
+*blackdown-jdk-1.4.2.03-r16 (26 May 2007)
+
+  26 May 2007; Vlastimil Babka <caster@gentoo.org>
+  -blackdown-jdk-1.4.2.03-r14.ebuild, +blackdown-jdk-1.4.2.03-r16.ebuild:
+  Revbump to move src.zip to right location, while still symlinking from
+  previous location, bug #2241. Also adds examples USE flag to install demos
+  to be in sync with other JDK's; remove unused revision.
 
   21 May 2007; Christian Faulhammer <opfer@gentoo.org>
   blackdown-jdk-1.4.2.03-r15.ebuild:
