--- a/x11-plugins/gkrellmwho2/ChangeLog
+++ b/x11-plugins/gkrellmwho2/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-plugins/gkrellmwho2
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-plugins/gkrellmwho2/ChangeLog,v 1.9 2007/04/26 19:16:02 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-plugins/gkrellmwho2/ChangeLog,v 1.10 2007/05/26 13:49:43 opfer Exp $
+
+  26 May 2007; Christian Faulhammer <opfer@gentoo.org>
+  gkrellmwho2-0.2.8.ebuild:
+  amd64 stable, bug 176144
 
   26 Apr 2007; Raúl Porcel <armin76@gentoo.org> gkrellmwho2-0.2.8.ebuild:
   x86 stable wrt #176144
