--- a/dev-java/adaptx/ChangeLog
+++ b/dev-java/adaptx/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/adaptx
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/adaptx/ChangeLog,v 1.26 2007/05/26 09:37:03 caster Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/adaptx/ChangeLog,v 1.27 2007/05/26 14:36:21 opfer Exp $
+
+  26 May 2007; Christian Faulhammer <opfer@gentoo.org>
+  adaptx-0.9.13_p20041105-r3.ebuild:
+  x86 stable, bug 175949
 
 *adaptx-0.9.13_p20041105-r3 (26 May 2007)
 
