--- a/profiles/default-linux/x86/ChangeLog
+++ b/profiles/default-linux/x86/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for Gentoo/x86 profile directory
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/default-linux/x86/ChangeLog,v 1.86 2007/05/22 16:28:21 phreak Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/default-linux/x86/ChangeLog,v 1.87 2007/05/26 15:45:39 ticho Exp $
+
+  26 May 2007; Andrej Kacian <ticho@gentoo.org> no-nptl/2.4/package.mask:
+  Masked >=media-sound/sonata-1.1.1, as it needs >=pygtk-2.10, which is masked
+  in this profile.
 
   22 May 2007; Christian Heim <phreak@gentoo.org>
   default-linux/x86/vserver/no-nptl/package.mask:
