--- a/gnome-extra/gnome-keyring-manager/ChangeLog
+++ b/gnome-extra/gnome-keyring-manager/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for gnome-extra/gnome-keyring-manager
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnome-keyring-manager/ChangeLog,v 1.39 2007/04/18 10:46:34 drac Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnome-keyring-manager/ChangeLog,v 1.40 2007/05/26 16:12:28 leio Exp $
+
+  26 May 2007; Mart Raudsepp <leio@gentoo.org>
+  -gnome-keyring-manager-2.16.0.ebuild:
+  Remove old revision
 
   18 Apr 2007; Samuli Suominen <drac@gentoo.org>
   gnome-keyring-manager-2.16.0-r1.ebuild:
