--- a/xfce-extra/xarchiver/ChangeLog
+++ b/xfce-extra/xarchiver/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for xfce-extra/xarchiver
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xarchiver/ChangeLog,v 1.28 2007/05/18 11:37:52 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xarchiver/ChangeLog,v 1.29 2007/05/26 17:18:40 nixnut Exp $
+
+  26 May 2007; nixnut <nixnut@gentoo.org> xarchiver-0.4.6.ebuild:
+  Stable on ppc wrt bug 178510
 
   18 May 2007; Raúl Porcel <armin76@gentoo.org> xarchiver-0.4.6.ebuild:
   alpha/ia64 stable wrt #178510
