--- a/profiles/default-bsd/ChangeLog
+++ b/profiles/default-bsd/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for profile directory
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/default-bsd/ChangeLog,v 1.4 2007/05/25 13:22:50 beandog Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/default-bsd/ChangeLog,v 1.5 2007/05/26 19:48:08 tester Exp $
+
+  26 May 2007; Olivier Crête <tester@gentoo.org> package.use.mask:
+  Mask zephyr flag for pidgin on bsd because mit-krb5 is not keyworded
 
   25 May 2007; Steve Dibb <beandog@gentoo.org> package.use.mask:
   p.use.mask ieee1394 on kdebase, since dep isn't keyworded
