--- a/kde-base/kpilot/ChangeLog
+++ b/kde-base/kpilot/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kpilot
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kpilot/ChangeLog,v 1.58 2007/05/23 01:05:57 carlo Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kpilot/ChangeLog,v 1.59 2007/05/26 19:56:40 cryos Exp $
+
+  26 May 2007; Marcus D. Hanwell <cryos@gentoo.org> kpilot-3.5.5.ebuild:
+  Allow this version to be used with KDE 3.5.7
 
 *kpilot-3.5.7 (23 May 2007)
 
