--- a/xfce-extra/notification-daemon-xfce/ChangeLog
+++ b/xfce-extra/notification-daemon-xfce/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for xfce-extra/notification-daemon-xfce
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-extra/notification-daemon-xfce/ChangeLog,v 1.1 2007/05/26 18:22:33 drac Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-extra/notification-daemon-xfce/ChangeLog,v 1.2 2007/05/26 22:07:16 welp Exp $
+
+  26 May 2007; Peter Weller <welp@gentoo.org>
+  notification-daemon-xfce-0.3.7.ebuild:
+  Keyworded ~x86-fbsd
 
 *notification-daemon-xfce-0.3.7 (26 May 2007)
 
