--- a/www-apps/xrms/ChangeLog
+++ b/www-apps/xrms/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for www-apps/xrms
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apps/xrms/ChangeLog,v 1.1 2007/01/03 00:50:48 rl03 Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apps/xrms/ChangeLog,v 1.2 2007/05/26 22:44:54 rl03 Exp $
+
+  26 May 2007; Renat Lumpau <rl03@gentoo.org> xrms-1.99.2.ebuild:
+  Drop USE="intl" per bug #174367.
 
 *xrms-1.99.2 (03 Jan 2007)
 
