--- a/dev-java/cairo-java/ChangeLog
+++ b/dev-java/cairo-java/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/cairo-java
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/cairo-java/ChangeLog,v 1.16 2007/02/10 17:45:31 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/cairo-java/ChangeLog,v 1.17 2007/05/27 00:24:32 betelgeuse Exp $
+
+  27 May 2007; Petteri Räty <betelgeuse@gentoo.org>
+  -cairo-java-1.0.2-r1.ebuild:
+  Removed old version.
 
   10 Feb 2007; nixnut <nixnut@gentoo.org> cairo-java-1.0.5-r1.ebuild:
   Stable on ppc wrt bug 160002
