--- a/x11-drivers/xf86-video-i810/ChangeLog
+++ b/x11-drivers/xf86-video-i810/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-drivers/xf86-video-i810
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-drivers/xf86-video-i810/ChangeLog,v 1.57 2007/05/05 18:28:31 dang Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-drivers/xf86-video-i810/ChangeLog,v 1.58 2007/05/27 05:38:40 dberkholz Exp $
+
+  27 May 2007; Donnie Berkholz <dberkholz@gentoo.org>; files/i810.xinf:
+  Import new stuff from RH: moves 945 and 965 chips onto the 'intel' driver.
 
   05 May 2007; Daniel Gryniewicz <dang@gentoo.org>
   xf86-video-i810-1.7.4.ebuild:
