--- a/xfce-base/libxfce4mcs/ChangeLog
+++ b/xfce-base/libxfce4mcs/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for xfce-base/libxfce4mcs
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-base/libxfce4mcs/ChangeLog,v 1.94 2007/05/24 20:38:40 pylon Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-base/libxfce4mcs/ChangeLog,v 1.95 2007/05/27 06:11:49 kumba Exp $
+
+  27 May 2007; Joshua Kinard <kumba@gentoo.org> libxfce4mcs-4.4.1.ebuild:
+  Stable on mips.
 
   24 May 2007; Lars Weiler <pylon@gentoo.org> libxfce4mcs-4.4.1.ebuild:
   Stable on ppc; bug #178510.
