--- a/xfce-base/xfce-mcs-manager/ChangeLog
+++ b/xfce-base/xfce-mcs-manager/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for xfce-base/xfce-mcs-manager
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfce-mcs-manager/ChangeLog,v 1.90 2007/05/24 20:42:30 pylon Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfce-mcs-manager/ChangeLog,v 1.91 2007/05/27 06:15:30 kumba Exp $
+
+  27 May 2007; Joshua Kinard <kumba@gentoo.org>
+  xfce-mcs-manager-4.4.1.ebuild:
+  Stable on mips.
 
   24 May 2007; Lars Weiler <pylon@gentoo.org> xfce-mcs-manager-4.4.1.ebuild:
   Stable on ppc; bug #178510.
