--- a/xfce-extra/xfce4-dev-tools/ChangeLog
+++ b/xfce-extra/xfce4-dev-tools/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for xfce-extra/xfce4-dev-tools
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-dev-tools/ChangeLog,v 1.13 2007/03/15 13:45:15 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-dev-tools/ChangeLog,v 1.14 2007/05/27 06:37:49 kumba Exp $
+
+  27 May 2007; Joshua Kinard <kumba@gentoo.org>
+  xfce4-dev-tools-4.4.0.ebuild:
+  Stable on mips.
 
   15 Mar 2007; Markus Rothe <corsair@gentoo.org>
   xfce4-dev-tools-4.4.0.ebuild:
