--- a/xfce-base/xfce-utils/ChangeLog
+++ b/xfce-base/xfce-utils/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for xfce-base/xfce-utils
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfce-utils/ChangeLog,v 1.110 2007/05/25 12:32:38 drac Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfce-utils/ChangeLog,v 1.111 2007/05/27 06:39:15 kumba Exp $
+
+  27 May 2007; Joshua Kinard <kumba@gentoo.org> xfce-utils-4.4.1-r1.ebuild:
+  Stable on mips.
 
   25 May 2007; Samuli Suominen <drac@gentoo.org>
   -files/xfce-utils-4.4.1-dpi.patch, -xfce-utils-4.4.1-r2.ebuild:
