--- a/xfce-extra/exo/ChangeLog
+++ b/xfce-extra/exo/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for xfce-extra/exo
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-extra/exo/ChangeLog,v 1.44 2007/03/15 13:28:51 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-extra/exo/ChangeLog,v 1.45 2007/05/27 06:56:27 kumba Exp $
+
+  27 May 2007; Joshua Kinard <kumba@gentoo.org> exo-0.3.2.ebuild:
+  Stable on mips.
 
   15 Mar 2007; Markus Rothe <corsair@gentoo.org> exo-0.3.2.ebuild:
   Stable on ppc64; bug #169987
