--- a/xfce-extra/mousepad/ChangeLog
+++ b/xfce-extra/mousepad/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for xfce-extra/mousepad
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-extra/mousepad/ChangeLog,v 1.39 2007/03/15 13:39:12 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-extra/mousepad/ChangeLog,v 1.40 2007/05/27 06:45:47 kumba Exp $
+
+  27 May 2007; Joshua Kinard <kumba@gentoo.org> mousepad-0.2.12.ebuild:
+  Stable on mips.
 
   15 Mar 2007; Markus Rothe <corsair@gentoo.org> mousepad-0.2.12.ebuild:
   Stable on ppc64; bug #169987
