--- a/xfce-extra/xfce4-appfinder/ChangeLog
+++ b/xfce-extra/xfce4-appfinder/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for xfce-extra/xfce4-appfinder
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-appfinder/ChangeLog,v 1.57 2007/05/24 20:45:16 pylon Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-appfinder/ChangeLog,v 1.58 2007/05/27 06:44:24 kumba Exp $
+
+  27 May 2007; Joshua Kinard <kumba@gentoo.org>
+  xfce4-appfinder-4.4.1.ebuild:
+  Stable on mips.
 
   24 May 2007; Lars Weiler <pylon@gentoo.org> xfce4-appfinder-4.4.1.ebuild:
   Stable on ppc; bug #178510.
