--- a/xfce-extra/xfwm4-themes/ChangeLog
+++ b/xfce-extra/xfwm4-themes/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for xfce-extra/xfwm4-themes
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfwm4-themes/ChangeLog,v 1.86 2007/05/24 21:00:36 pylon Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfwm4-themes/ChangeLog,v 1.87 2007/05/27 06:49:12 kumba Exp $
+
+  27 May 2007; Joshua Kinard <kumba@gentoo.org> xfwm4-themes-4.4.1.ebuild:
+  Stable on mips.
 
   24 May 2007; Lars Weiler <pylon@gentoo.org> xfwm4-themes-4.4.1.ebuild:
   Stable on ppc; bug #178510.
