--- a/xfce-base/xfprint/ChangeLog
+++ b/xfce-base/xfprint/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for xfce-base/xfprint
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfprint/ChangeLog,v 1.98 2007/05/24 20:56:23 pylon Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfprint/ChangeLog,v 1.99 2007/05/27 07:26:16 kumba Exp $
+
+  27 May 2007; Joshua Kinard <kumba@gentoo.org> xfprint-4.4.1.ebuild:
+  Stable on mips.
 
   24 May 2007; Lars Weiler <pylon@gentoo.org> xfprint-4.4.1.ebuild:
   Stable on ppc; bug #178510.
