--- a/xfce-extra/xfce4-icon-theme/ChangeLog
+++ b/xfce-extra/xfce4-icon-theme/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for xfce-extra/xfce4-icon-theme
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-icon-theme/ChangeLog,v 1.55 2007/05/24 20:12:36 pylon Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-icon-theme/ChangeLog,v 1.56 2007/05/27 07:31:21 kumba Exp $
+
+  27 May 2007; Joshua Kinard <kumba@gentoo.org>
+  xfce4-icon-theme-4.4.1.ebuild:
+  Stable on mips.
 
   24 May 2007; Lars Weiler <pylon@gentoo.org> xfce4-icon-theme-4.4.1.ebuild:
   Stable on ppc; bug #178510.
