--- a/xfce-base/xfce4/ChangeLog
+++ b/xfce-base/xfce4/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for xfce-base/xfce4
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfce4/ChangeLog,v 1.104 2007/05/24 21:09:32 pylon Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfce4/ChangeLog,v 1.105 2007/05/27 07:34:27 kumba Exp $
+
+  27 May 2007; Joshua Kinard <kumba@gentoo.org> xfce4-4.4.1.ebuild:
+  Stable on mips.
 
   24 May 2007; Lars Weiler <pylon@gentoo.org> xfce4-4.4.1.ebuild:
   Stable on ppc; bug #178510.
