--- a/media-sound/alsa-headers/ChangeLog
+++ b/media-sound/alsa-headers/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-sound/alsa-headers
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/alsa-headers/ChangeLog,v 1.132 2007/05/07 21:19:28 genstef Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/alsa-headers/ChangeLog,v 1.133 2007/05/27 07:52:50 kumba Exp $
+
+  27 May 2007; Joshua Kinard <kumba@gentoo.org>
+  alsa-headers-1.0.14_rc2.ebuild:
+  Stable on mips.
 
 *alsa-headers-1.0.14_rc4 (07 May 2007)
 
