--- a/net-irc/xchat/ChangeLog
+++ b/net-irc/xchat/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-irc/xchat
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-irc/xchat/ChangeLog,v 1.247 2007/05/19 08:46:56 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-irc/xchat/ChangeLog,v 1.248 2007/05/27 08:22:21 kumba Exp $
+
+  27 May 2007; Joshua Kinard <kumba@gentoo.org> xchat-2.8.2.ebuild:
+  Stable on mips.
 
   19 May 2007; Markus Rothe <corsair@gentoo.org> xchat-2.8.2.ebuild:
   Stable on ppc64; bug #167328
