--- a/net-mail/freepops/ChangeLog
+++ b/net-mail/freepops/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for net-mail/freepops
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-mail/freepops/ChangeLog,v 1.30 2007/05/19 00:47:18 dragonheart Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/freepops/ChangeLog,v 1.31 2007/05/27 09:12:26 dragonheart Exp $
+
+*freepops-0.2.4 (27 May 2007)
+
+  27 May 2007; Daniel Black <dragonheart@gentoo.org>
+  -files/freepops-0.2.2-gcrypt.patch, -freepops-0.2.2-r1.ebuild,
+  +freepops-0.2.4.ebuild:
+  version bump
 
 *freepops-0.2.3 (19 May 2007)
 
