Marking ppc64 stable to support stablization of bug 180100 Package-Manager: portage-2.1.2.7

--- a/x11-misc/emacs-desktop/ChangeLog
+++ b/x11-misc/emacs-desktop/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-misc/emacs-desktop
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/emacs-desktop/ChangeLog,v 1.14 2007/05/28 12:33:06 gustavoz Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/emacs-desktop/ChangeLog,v 1.15 2007/05/28 13:06:39 ranger Exp $
+
+  28 May 2007; Brent Baude <ranger@gentoo.org> emacs-desktop-0.2-r1.ebuild:
+  Marking ppc64 stable to support stablization of bug 180100
 
   28 May 2007; Gustavo Zacarias <gustavoz@gentoo.org>
   emacs-desktop-0.2-r1.ebuild:
