QA. Don't prestrip binary. Package-Manager: portage-2.1.2.7

--- a/x11-misc/bubblemon/ChangeLog
+++ b/x11-misc/bubblemon/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-misc/bubblemon
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/bubblemon/ChangeLog,v 1.23 2007/05/28 14:56:32 drac Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/bubblemon/ChangeLog,v 1.24 2007/05/28 15:14:12 drac Exp $
+
+  28 May 2007; Samuli Suominen <drac@gentoo.org>
+  files/bubblemon-1.46-gtk.patch:
+  QA. Don't prestrip binary.
 
 *bubblemon-1.46-r1 (28 May 2007)
 
