depreciated -> deprecated. bug #180352 Package-Manager: portage-2.1.2.7

--- a/media-libs/ladcca/ChangeLog
+++ b/media-libs/ladcca/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for media-libs/ladcca
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/ladcca/ChangeLog,v 1.23 2007/02/22 01:49:54 peper Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/ladcca/ChangeLog,v 1.24 2007/05/30 15:43:24 cardoe Exp $
+
+  30 May 2007; Doug Goldstein <cardoe@gentoo.org>
+  +files/ladcca-0.4.0-deprecated_jackAPI.patch,
+  -files/ladcca-0.4.0-depreciated_jackAPI.patch:
+  depreciated -> deprecated. bug #180352
 
   22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
   Transition to Manifest2.
